Add basic structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <title>North SD Landscaping</title>
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/main.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,6 +23,36 @@
 </head>
 
 <body>
+	<div>
+			<header>
+				<div>
+						<h1 class="header_title">North SD <br><span>Landscaping</span></h1>
+						<nav></nav>
+				</div>
+				<div>
+					<p>Some text goes in here</p>
+					<div>
+						<p>Contact Us: 760 456 1234</p>
+					</div>
+				</div>
+			</header>
+			
+			<main>
+				<h2>Home</h2>
+				<div>
+						<section>Item with image</section>
+						<section>Another Item</section>
+				</div>
+				<div>
+					<h2>Gallery</h2>
+					<div>images go in here</div>
+					<p>some link in here</p>
+				</div>
+			</main>
+			<footer>
+				<p>This is the footer</p>
+			</footer>
+	</div>
 
   <!-- SCRIPTS -->
 </body>
